implemented a searched_bar with conditional openning and closing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
 
 body {
   color: rgba(var(--color-primary-rgb), 1);
-  font-family: var(--font-primary);
+  font-family: var(--font-roboto-mono);
 }
 
 body::-webkit-scrollbar {
