--- a/src/app/variables.css
+++ b/src/app/variables.css
@@ -3,10 +3,10 @@
 --------------------------------------------------------------*/
 :root {
   /* Fonts */
-  --font-default: 'EB Garamond', system-ui, -apple-system, 'Segoe UI', Roboto,
+  /* --font-default: 'Roboto_Mono', system-ui, -apple-system, 'Segoe UI', Roboto,
     'Helvetica Neue', Arial, 'Noto Sans', 'Liberation Sans', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --font-primary: 'EB Garamond', serif; /*'Playfair Display', serif;*/
+    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; */
+  /*'Playfair Display', serif;*/
   --font-secondary: 'Inter', sans-serif;
 
   /* Colors */
